<resources>
    <string name="app_name">TapTapp</string>
    <string name="title_home">Perfil</string>
    <string name="title_dashboard">Disfruta</string>
    <string name="title_notifications">Explora</string>

    <string name="hola">¡Hola!</string>
    <string name="registrate">Regístrate con: </string>
    <string name="registratefb">Regístrate con Facebook. </string>
    <string name="registrateGoogle">Regístrate con Google. </string>
    <string name="seleccionaCuenta">Selecciona una cuenta: </string>
    <string name="cuenta1">unodos@gmail.com </string>
    <string name="principiante">Principiante</string>
    <string name="ingredientes_fav">Ingredientes favoritos:</string>
    <string name="recetas_completadas">Recetas completadas:</string>
    <string name="recetas_subidas">Recetas subidas:</string>
    <string name="fav">Favoritas:</string>
    <string name="ayuda">Ayuda</string>
    <string name="subir_receta">Subir receta</string>
    <string name="seguidos">Seguidos</string>
    <string name="tus_gustos">Tu comida <br />tus gustos</string>
    <string name="selecciona_Ingredientes">Selecciona los ingredientes con los que <br /> sueles contar, para brindarte la mejor <br /> experiencia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec accumsan auctor pharetra. Fusce porttitor elit quis luctus convallis. Maecenas id mattis quam, non ultrices lorem. Suspendisse interdum ligula vitae turpis pharetra aliquam. Integer sit amet fringilla ligula.</string>

    <!-- Ingredientes-->
    <string name="carne">Carne</string>
    <string name="frutas">Frutas</string>
    <string name="vegetales">Vegetales</string>
    <string name="especias">Especias</string>
    <string name="picante">Picante</string>
    <string name="huevos">Huevos</string>

    <!-- Ingredientes-->
    <string name="mexicana">Mexicana</string>

    <string name="default_web_client_id">473735099122-kn9tu8eqguvcgs2e40g8b798ai53r657.apps.googleusercontent.com</string>

</resources>