<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/hola"
        android:textSize="50dp"
        android:fontFamily="@font/cocogoose"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/registrate"
        android:textSize="20dp"
        android:fontFamily="@font/cocogoose"
        />

    <Button
        android:id="@+id/login_google"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/registrateGoogle"
        android:textAllCaps="false"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@color/white"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/login_fb"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/registratefb"
        android:textAllCaps="false"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />







</LinearLayout>