<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="15dp"
            android:id="@+id/imageView"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/cocogoose"
                android:text="Erik Galvan"
                android:textColor="@color/green"
                android:textSize="25dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/green"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/principiante"
                android:fontFamily="@font/cocogoose"
                android:textColor="@color/green"
                android:textSize="25dp"
                />

        </LinearLayout>


    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientes_fav"
            android:fontFamily="@font/cocogoose"
            android:textColor="@color/green"
            android:textSize="15dp"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:background="@drawable/bordes_redondos_verdes"
            android:text="@string/recetas_completadas"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:fontFamily="@font/cocogoose"
            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:background="@drawable/bordes_redondos_verdes"
            android:text="@string/recetas_subidas"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:fontFamily="@font/cocogoose"
            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:background="@drawable/bordes_redondos_verdes"
            android:text="@string/fav"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:fontFamily="@font/cocogoose"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

                <Button
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:background="@drawable/bordes_redondos_verdes"
                    android:text="@string/ayuda"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:fontFamily="@font/cocogoose"
                    />

                <Button
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:background="@drawable/bordes_redondos_verdes"
                    android:text="@string/subir_receta"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:fontFamily="@font/cocogoose"
                    />

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:background="@drawable/bordes_redondos_verdes"
            android:text="@string/seguidos"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:fontFamily="@font/cocogoose"
            />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/orange"
        app:menu="@menu/bottom_nav_menu"

        app:navGraph="@navigation/mobile_navigation" />

</LinearLayout>