<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/cocogoose"
                android:text="Erik Galvan"
                android:textColor="@color/green"
                android:textSize="25sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cocogoose"
                android:text="@string/principiante"
                android:textColor="@color/green"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cocogoose"
                android:text="@string/ingredientes_fav"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <Button
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes_redondos_verdes"
                android:fontFamily="@font/cocogoose"
                android:text="@string/recetas_completadas"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes_redondos_verdes"
                android:fontFamily="@font/cocogoose"
                android:text="@string/recetas_subidas"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes_redondos_verdes"
                android:fontFamily="@font/cocogoose"
                android:text="@string/fav"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos_verdes"
                    android:fontFamily="@font/cocogoose"
                    android:text="@string/ayuda"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bordes_redondos_verdes"
                    android:fontFamily="@font/cocogoose"
                    android:text="@string/subir_receta"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

            </LinearLayout>

            <Button
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes_redondos_verdes"
                android:fontFamily="@font/cocogoose"
                android:text="@string/seguidos"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>